--- a/MÓDULO 1/EXERCICIOS/ex001/index.html
+++ b/MÓDULO 1/EXERCICIOS/ex001/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Esse é o meu primeiro documento HTML, estou muito feliz!</p>
     <p>Este é um monento único, estou criando um site!</p>
+    <p>Olá</p>
 </body>
 </html>
