--- a/MÓDULO 5/EXERCICIOS/exe027 - Flexbox 02/index.html
+++ b/MÓDULO 5/EXERCICIOS/exe027 - Flexbox 02/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox</title>
+    <title>Flexbox Direção e Eixo</title>
     <style>
 
         div.container {
             background-color: salmon;
 
             display: flex;
+            flex-direction: row;
         }
 
         div.item {
             background-color: lightblue;
             border: 1px solid black;
             text-align: center;
-            flex: auto;
+            padding: 10px;
+            
         }
     </style>
 </head>
