--- a/MÓDULO 3/DESAFIOS/DESAFIOCORDEL/index.html
+++ b/MÓDULO 3/DESAFIOS/DESAFIOCORDEL/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Família Castelao</title>
     <link rel="stylesheet" href="estilo/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ICO" type="image/x-icon">
 </head>
 <body>
     <header>
